new style for hover links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<p class="small_text">
 								Currently, I am a PhD candidate at the same department and a member of Systems Research Group 
 								(SRG). <br /> 
-								My main research interests include Operating Systems, Data Storage, and Systems Security. <br />
+								My main research interests include <em>Operating Systems</em>, <em>Data Storage</em>, and <em>Systems Security</em>. <br />
 								For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
 								Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /><br /> 
 								You can also check my <a href = "https://github.com/geokapp">github profile</a> page for a 
@@ -82,10 +82,10 @@
 							<div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
 							<h3> Research</h3> 
 							<p class="medium_text"> 
-								My main research interests lie in the fields of virtualization, file and 
-								storage systems, as well as security and privacy. However, I am interested 
-								in pretty much everything to do with computer systems.
-								Following are some of the projects that I have worked on:
+								My main research interests lie in the fields of operating systems, data
+								storage, and systems security. However, I am interested in pretty much
+								everything to do with computer systems. Following are some of the projects
+								that I have worked on:
 							</p>
 						</div>
 						<div class="col_l">
