Fixed email link

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 							<dl class="small_text" id="email">
 								<dt> EMAIL </dt>
 								<dd> 
-									<a href="mailto:contact@giorgoskappes.com">giorgos (at) giorgoskappes.com</a><br /> 
+									<a href="mailto:giorgos@giorgoskappes.com">giorgos (at) giorgoskappes.com</a><br /> 
 								</dd>
 								<dd> 
 									<a href="mailto:gkappes@cs.uoi.gr">gkappes (at) cs.uoi.gr</a><br />							
