--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
 	      </p>
 	    </div>
 	    <div class="col_c">
+	      <h4> Journal Papers </h4>
+	      <ul class="small_text">
+		<li> 	Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
+		   Multitenant Access Control for Cloud-Aware Distributed Filesystems, <b> IEEE 
+		   Transactions on Dependable and Secure Computing (TDSC)</b>, 
+		   2017 (to appear). <br />
+		</li>
+	      </ul>
 	      <h4> Conference Papers </h4>
 	      <ul class="small_text">
 		<li> 	Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
