Added link to paper

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 		<li> 	Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
 		   Multitenant Access Control for Cloud-Aware Distributed Filesystems, <b> IEEE 
 		   Transactions on Dependable and Secure Computing (TDSC)</b>, 
-		   2017 (to appear).
-		  (<a href="http://doi.ieeecomputersociety.org/10.1109/TDSC.2017.2715839">IEEE</a>,
-		  (<a href="http://srg.cs.uoi.gr/pdf/dike-tdsc17.pdf">PDF</a>
+		   2017 (to appear),
+		  <a href="http://doi.ieeecomputersociety.org/10.1109/TDSC.2017.2715839">IEEE</a>,
+		  <a href="http://srg.cs.uoi.gr/pdf/dike-tdsc17.pdf">PDF</a>.
 		  <br />
 		</li>
 	      </ul>
