--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
 	    </div>
 	    <div class="col_l">
 	      <p class="small_text">
-		I am Giorgos E. Kappes and I was born in <a href="http://www.ioannina.gr/">Ioannina, Greece</a> in 
-		1987. I obtained my BSc degree from <a href="http://www.cse.uoi.gr/">the Department
-		  of Computer Science &amp; Engineering</a> (former Computer Science), of the
-		<a href="http://www.uoi.gr/">University of Ioannina </a> in 2011.
-		During my undergraduate studies, I gained basic knowledge in building high performance 
-		systems, software and Internet services, as well as in evaluating and improving the performance of
-		existing systems. Furthermore, I had the opportunity to work on a thesis entitled “Logging file access 
-		patterns for a more efficient file search on file systems” which helped me to deepen my 
-		knowledge in the fields of information retrieval, file and storage systems, and MS Windows driver development.<br />
-		I completed my MSc in the <a href="http://srg.cs.uoi.gr/">Systems Research Group (SRG) </a>of the same department
-		under the supervision of <a href="http://www.cs.uoi.gr/~stergios">Prof. Stergios Anastasiadis</a>. In
-		our research we examined approaches for efficient and effective support of multitenancy in filesystems
-		used by virtual machines. The title of my MSc thesis was “Scalable Access Control for Secure 
-		Multi-Tenant Filesystems”.<br /> 	  
+		I am Georgios E. Kappes and I was born in
+		<a href="http://www.ioannina.gr/">Ioannina, Greece</a>
+		in 1987. I hold a MSc degree in Computer Systems and a BSc degree
+		from the
+		<a href="http://www.cse.uoi.gr/"> Department of Computer Science and Engineering</a>,
+		<a href="http://www.uoi.gr/"> University of Ioannina</a>, Greece.
+		I have extensive experience in conducting research in computer systems. My research includes the design,
+		development, and evaluation of system software for multi-tenant virtualization environments.
+
+		I completed my MSc under the supervision of
+		<a href="http://www.cs.uoi.gr/~stergios">Prof. Stergios Anastasiadis</a>.
+		In our research we studied approaches for efficient and effective support of multitenancy in filesystems
+		used by virtual machines. <br>
 	      </p>
 	    </div>
 	    <div class="col_r">
 	      <p class="small_text">
-		Currently, I am a PhD candidate at the same department and a member of Systems Research Group 
-		(SRG). <br /> 
-		My main research interests include <em>Operating Systems</em>, <em>Data Storage</em>, and <em>Systems Security</em>. <br />
+		Currently, I am a PhD candidate at the
+		<a href="http://srg.cs.uoi.gr/">Systems Research Group (SRG)</a>
+		of the University of Ioannina.
+		My research interests include operating systems, data storage, and systems security.
 		For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
-		  Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /><br /> 
+		Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /><br /> 
 		You can also check my <a href = "https://github.com/geokapp">github profile</a> page for a 
 		list of open source projects that I've contributed on. 
 	      </p>
