--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		I completed my MSc under the supervision of
 		<a href="http://www.cs.uoi.gr/~stergios">Prof. Stergios Anastasiadis</a>.
 		In our research we studied approaches for efficient and effective support of multitenancy in filesystems
-		used by virtual machines. <br>
+		used by virtual machines. <br />
 	      </p>
 	    </div>
 	    <div class="col_r">
@@ -64,9 +64,9 @@
 		Currently, I am a PhD candidate at the
 		<a href="http://srg.cs.uoi.gr/">Systems Research Group (SRG)</a>
 		of the University of Ioannina.
-		My research interests include operating systems, data storage, and systems security.
+		My research interests include operating systems, data storage, and systems security. <br />
 		For more information about me, you can find my curriculum vitae here: <a href = "files/cv_gr.pdf">in 
-		Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br /><br /> 
+		Greek</a>, <a href = "files/cv_en.pdf">in English</a>.<br />
 		You can also check my <a href = "https://github.com/geokapp">github profile</a> page for a 
 		list of open source projects that I've contributed on. 
 	      </p>
