Added BSc thesis text

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		feed the search engine with the right results we developed a prototype filter 
 		driver over Windows NTFS to record important access characteristics of the local 
 		files. (BSc Thesis. In collaboration with  <a href="http://cs.uoi.gr/~emicheli"> Eirini 
-		  Micheli</a>. Supervisor: <a href="http://cs.uoi.gr/~stergios"> Stergios V. Anastasiadis</a>)<br />
+		Micheli</a>. Supervisor: <a href="http://cs.uoi.gr/~stergios"> Stergios V. Anastasiadis</a>)<br />
 	      </p>
 	    </div>
 	    <div class="col_l">
@@ -145,7 +145,7 @@
 	    <div class="col_c">
 	      <h4> Journal Papers </h4>
 	      <ul class="small_text">
-		<li> 	Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
+		<li> Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
 		   Multitenant Access Control for Cloud-Aware Distributed Filesystems, <b> IEEE 
 		   Transactions on Dependable and Secure Computing (TDSC)</b>, 
 		   2017 (to appear),
@@ -156,9 +156,9 @@
 	      </ul>
 	      <h4> Conference Papers </h4>
 	      <ul class="small_text">
-		<li> 	Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
+		<li> Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
 		  Virtualization-aware Access Control for Multitenant Filesystems, <b> IEEE 
-		    International Conference on Massive Storage Systems and Technology (MSST)</b>, 
+		  International Conference on Massive Storage Systems and Technology (MSST)</b>, 
 		  Santa Clara, CA, USA, June 2014.
 		  (<a href="http://www.storageconference.us/2014/Papers/10.Virtualization.pdf">Paper</a>,
 		  <a href="files/Kappes_msst.pdf"> Presentation</a>).<br />
@@ -166,10 +166,10 @@
 	      </ul>
 	      <h4> Technical Reports </h4>
 	      <ul class="small_text">
-		<li> 	Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
+		<li> Giorgos Kappes, Andromachi Hatzieleftheriou, Stergios V. Anastasiadis, 
 		  Dike: Virtualization-aware Access Control for Multitenant Filesystems. 
 		  <b> Technical Report DCS2013-1, Department of Computer Science, University 
-		    of Ioannina</b>, February 2013. 
+		  of Ioannina</b>, February 2013. 
 		  <a href="http://srg.cs.uoi.gr/pdf/tr-dcs-2013-1.pdf">(Paper)</a>.<br />
 		</li>  			
 	      </ul> 
@@ -181,6 +181,15 @@
 		  October 2013. 
 		  (<a href="files/publications/msc.pdf">Text</a>, 
 		  <a href="files/publications/msc_presentation.pdf"> Presentation</a>).<br />
+		</li>  			
+	      </ul>								
+	      <h4> BSc Thesis </h4>
+	      <ul class="small_text">
+		<li> <b>Logging File Access Patterns for a More Efficient File Search on Filesystems.</b> 
+		  Giorgos Kappes, Eirini Micheli, thesis supervisor: Stergios V. Anastasiadis. BSc Thesis, 
+		  Department of Computer Science and Engineering, University of Ioannina, Greece, 
+		  October 2013. 
+		  (<a href="files/publications/bsc.pdf">Text</a>).<br />
 		</li>  			
 	      </ul>								
 	      <h4> Invited Talks </h4>
