Added BSc thesis text

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		  Giorgos Kappes, Eirini Micheli, thesis supervisor: Stergios V. Anastasiadis. BSc Thesis, 
 		  Department of Computer Science and Engineering, University of Ioannina, Greece, 
 		  October 2013. 
-		  (<a href="files/publications/bsc.pdf">Text</a>).<br />
+		  (<a href="files/publications/bsc.pdf">Text in Greek</a>).<br />
 		</li>  			
 	      </ul>								
 	      <h4> Invited Talks </h4>
