new color scheme, new logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	    </div>
 	    <div class="col_l">
 	      <p class="small_text">
-		I am Georgios E. Kappes and I was born in
+		I am Giorgos E. Kappes and I was born in
 		<a href="http://www.ioannina.gr/">Ioannina, Greece</a>
 		in 1987. I hold a MSc degree in Computer Systems and a BSc degree
 		from the
