--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
       var sc_invisible=1; 
       var sc_security="fa35d55f"; 
     </script>
-    <script type="text/javascript"
-	    src="http://www.statcounter.com/counter/counter_xhtml.js">
+    <script type="text/javascript" src="javascript/counter_xhtml.js">
     </script>
     <noscript>
       <div class="statcounter">
@@ -296,7 +295,7 @@
     </noscript>
     <!-- Smooth scrolling --> 
     <script type="text/javascript" src="javascript/jquery.min.js"></script>		
-    <script type="text/javascript" src= "javascript/smoothscroll.js"></script>
+    <script type="text/javascript" src="javascript/smoothscroll.js"></script>
     <!-- Fixed nav bar --> 
     <script type="text/javascript" src="javascript/fixnav.js"></script>		
   </body>	
