New color for even and odd sections

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	</ul>
       </div>				
     </div>	
+    <div class="container_odd">
     <div class="container_main">	
       <div class="section_first"><a class="anchor" id="profile"></a>
 	<div class="row">
@@ -71,7 +72,12 @@
 	    </div>
 	  </div>
 	</div>	
-      </div>			
+      </div>
+      <div class="cleared"></div>
+    </div>
+    </div>
+    <div class="container_even">
+    <div class="container_main">
       <div class="section"> <a class="anchor" id="research"></a>
 	<div class="row">
 	  <div class="row_in">
@@ -129,7 +135,12 @@
 	    </div>				
 	  </div>
 	</div>	
-      </div>				
+      </div>
+      <div class="cleared"></div>
+    </div>
+    </div>
+    <div class="container_odd">
+    <div class="container_main">
       <div class="section"> <a class="anchor" id="publications"></a>
 	<div class="row">
 	  <div class="row_in">
@@ -200,8 +211,12 @@
 	    </div>
 	  </div>
 	</div>									
-      </div>						
-      
+      </div>
+      <div class="cleared"></div>
+    </div>
+    </div>
+    <div class="container_even">
+    <div class="container_main">
       <div class="section"> <a class="anchor" id="contact"></a>
 	<div class="row">
 	  <div class="row_in">
@@ -263,7 +278,8 @@
 	  </div>
 	</div>									
       </div>
-      <div class="cleared"></div>
+      <div class="cleared"></div>      
+    </div>
     </div>
     <div class="footer">
       <p class="tiny_text"> 
