Fixed menu button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
       <div class="nav" id="nav">
 	<ul>
+	  <li class="menubutton"></li>
 	  <li><a href="#profile" class="smoothScroll">Profile </a></li>
 	  <li><a href="#research" class="smoothScroll"> Research </a></li>
 	  <li><a href="#publications" class="smoothScroll"> Publications </a></li>					
