Changed scrollign script

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
       <div class="profile_container">
 	<div class="profile_image"></div>
 	<div class="profile_text">
-	  <a class="anchor" id="top"></a><h1 class="headertext"> Giorgos Kappes </h1>
+	  <h1 class="headertext" id="top"> Giorgos Kappes </h1>
 	  <h1 class="subheadertext"> PhD Candidate at Systems Research Group, UOI </h1>
 	</div>
       </div>
       <div class="nav" id="nav">
 	<ul>
 	  <li class="menubutton"></li>
-	  <li><a href="#profile" class="smoothScroll">Profile </a></li>
-	  <li><a href="#research" class="smoothScroll"> Research </a></li>
-	  <li><a href="#publications" class="smoothScroll"> Publications </a></li>					
-	  <li><a href="#contact" class="smoothScroll"> Contact </a></li>
+	  <li><a href="#profile"> Profile </a></li>
+	  <li><a href="#research"> Research </a></li>
+	  <li><a href="#publications"> Publications </a></li>					
+	  <li><a href="#contact"> Contact </a></li>
 	  <!-- <li><a href="http://giorgoskappes.com/blog/"> Blog </a></li> -->
 	</ul>
       </div>				
     </div>	
     <div class="container_odd">
     <div class="container_main">	
-      <div class="section_first"><a class="anchor" id="profile"></a>
-	<div class="row">
+      <div class="section_first">
+	<div class="row" id="profile">
 	  <div class="row_in">
 	    <div class="col_c">
-	      <div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
+	      <div class="backtotop"><a href="#top"><span>back to top</span></a></div>
 	      <h3> Profile </h3> 
 	      <p class="medium_text"> 
 		I am a PhD candidate in the Department of Computer Science and Engineering at 
@@ -79,8 +79,8 @@
     </div>
     <div class="container_even">
     <div class="container_main">
-      <div class="section"> <a class="anchor" id="research"></a>
-	<div class="row">
+      <div class="section">
+	<div class="row" id="research">
 	  <div class="row_in">
 	    <div class="col_c">
 	      <div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
@@ -142,8 +142,8 @@
     </div>
     <div class="container_odd">
     <div class="container_main">
-      <div class="section"> <a class="anchor" id="publications"></a>
-	<div class="row">
+      <div class="section">
+	<div class="row" id="publications">
 	  <div class="row_in">
 	    <div class="col_c">
 	      <div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
@@ -218,8 +218,8 @@
     </div>
     <div class="container_even">
     <div class="container_main">
-      <div class="section"> <a class="anchor" id="contact"></a>
-	<div class="row">
+      <div class="section">
+	<div class="row" id="contact">
 	  <div class="row_in">
 	    <div class="col_c">
 	      <div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
