--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="author" content="Giorgos Kappes"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="icon" type="image/png" href="images/logo_small.png"/>
+    <link rel="icon" type="image/x-icon" href="images/logo_small.ico"/>
     <title>Giorgos Kappes</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
