Changed position of stats script

--- a/index.html
+++ b/index.html
@@ -293,15 +293,14 @@
     <!-- Fixed nav bar -->
     <script type="text/javascript">
 	$(document).ready(function() {var s = $("#nav");var pos = s.position();$(window).scroll(function() {var windowpos = $(window).scrollTop();if (windowpos >= pos.top) {s.removeClass("nav"); s.addClass("nav-fixed");} else {s.removeClass("nav-fixed");s.addClass("nav");}});});
-    </script>
-    <!-- StatCounter -->
+    </script>   
+    <!-- Start of StatCounter Code for Default Guide -->
     <script type="text/javascript">
       var sc_project=7252688;
       var sc_invisible=1;
       var sc_security="fa35d55f";
     </script>
-    <script type="text/javascript" src="javascript/counter_xhtml.js">
-    </script>
+    <script type="text/javascript" async src="javascript/counter_xhtml.js"></script>
     <noscript>
       <div class="statcounter">
 	<a title="statistics in vBulletin" class="statcounter" href="http://statcounter.com/vbulletin/">
@@ -309,5 +308,6 @@
 	</a>
       </div>
     </noscript>
+    <!-- End of StatCounter Code for Default Guide -->
   </body>
 </html>
