--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       var sc_invisible=1;
       var sc_security="fa35d55f";
     </script>
-    <script type="text/javascript" async src="javascript/counter_xhtml.js"></script>
+    <script type="text/javascript" src="javascript/counter_xhtml.js"></script>
     <noscript>
       <div class="statcounter">
 	<a title="statistics in vBulletin" class="statcounter" href="http://statcounter.com/vbulletin/">
