changed id position

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	</ul>
       </div>
     </div>
-    <div class="container_odd">
+    <div class="container_odd" id="profile">
       <div class="container_main">
-	<div class="section_first" id="profile">
+	<div class="section_first">
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
@@ -72,9 +72,9 @@
 	<div class="cleared"></div>
       </div>
     </div>
-    <div class="container_even">
+    <div class="container_even" id="research">
       <div class="container_main">
-	<div class="section" id="research">
+	<div class="section">
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
@@ -134,9 +134,9 @@
 	<div class="cleared"></div>
       </div>
     </div>
-    <div class="container_odd">
+    <div class="container_odd" id="publications">
       <div class="container_main">
-	<div class="section" id="publications">
+	<div class="section">
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
@@ -209,7 +209,7 @@
 	<div class="cleared"></div>
       </div>
     </div>
-    <div class="container_even">
+    <div class="container_even" id="contact">
       <div class="container_main">
 	<div class="section" id="contact">
 	  <div class="row">
