--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
-		<div class="backtotop"><a href="#top"><span>back to top</span></a></div>
+		<div class="backtotop"><a href="#top">&uarr;</a></div>
 		<h3> Profile </h3>
 		<p class="medium_text">
 		  I am a PhD candidate in the Department of Computer Science and Engineering at
@@ -78,7 +78,7 @@
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
-		<div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
+		<div class="backtotop"><a href="#top" class="smoothScroll">&uarr;</a></div>
 		<h3> Research</h3>
 		<p class="medium_text">
 		  My main research interests lie in the fields of operating systems, data storage, and systems security.
@@ -140,7 +140,7 @@
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
-		<div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
+		<div class="backtotop"><a href="#top" class="smoothScroll">&uarr;</a></div>
 		<h3> Publications and Talks</h3>
 		<p class="medium_text">
 		  Following is a list of my recent publications and invited talks:
@@ -215,7 +215,7 @@
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
-		<div class="backtotop"><a href="#top" class="smoothScroll"><span>back to top</span></a></div>
+		<div class="backtotop"><a href="#top" class="smoothScroll">&uarr;</a></div>
 		<h3> Contact Me </h3>
 		<p class="medium_text">
 		  Most likely you will find me at A34 office in the first floor of the department.
