--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </div>
     <div class="container_even" id="contact">
       <div class="container_main">
-	<div class="section" id="contact">
+	<div class="section">
 	  <div class="row">
 	    <div class="row_in">
 	      <div class="col_c">
