--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
   <body>
-    <div class="header">													
+    <div class="header" id="top">													
       <div class="profile_container">
 	<div class="profile_image"></div>
 	<div class="profile_text">
-	  <h1 class="headertext" id="top"> Giorgos Kappes </h1>
+	  <h1 class="headertext" > Giorgos Kappes </h1>
 	  <h1 class="subheadertext"> PhD Candidate at Systems Research Group, UOI </h1>
 	</div>
       </div>
