changed fixed nav on mobile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	  <li><a href="#contact"> Contact </a></li>
 	  <!-- <li><a href="http://giorgoskappes.com/blog/"> Blog </a></li> -->
 	</ul>
+	<div class="backtotop"><a href="#top">&uarr;</a></div>
       </div>
     </div>
     <div class="container_odd" id="profile">
@@ -293,7 +294,7 @@
     <!-- Fixed nav bar -->
     <script type="text/javascript">
 	$(document).ready(function() {var s = $("#nav");var pos = s.position();$(window).scroll(function() {var windowpos = $(window).scrollTop();if (windowpos >= pos.top) {s.removeClass("nav"); s.addClass("nav-fixed");} else {s.removeClass("nav-fixed");s.addClass("nav");}});});
-    </script>   
+    </script>
     <!-- Start of StatCounter Code for Default Guide -->
     <script type="text/javascript">
       var sc_project=7252688;
