new mobile top button

--- a/index.html
+++ b/index.html
@@ -294,6 +294,21 @@
     <!-- Fixed nav bar -->
     <script type="text/javascript">
 	$(document).ready(function() {var s = $("#nav");var pos = s.position();$(window).scroll(function() {var windowpos = $(window).scrollTop();if (windowpos >= pos.top) {s.removeClass("nav"); s.addClass("nav-fixed");} else {s.removeClass("nav-fixed");s.addClass("nav");}});});
-    </script>       
+    </script>
+    <!-- Start of StatCounter Code for Default Guide -->
+    <script type="text/javascript">
+      var sc_project=7252688;
+      var sc_invisible=1;
+      var sc_security="fa35d55f";
+    </script>
+    <script type="text/javascript" src="javascript/counter_xhtml.js"></script>
+    <noscript>
+      <div class="statcounter">
+	<a title="statistics in vBulletin" class="statcounter" href="http://statcounter.com/vbulletin/">
+	  <img class="statcounter" src="http://c.statcounter.com/7252688/0/fa35d55f/1/" alt="statistics in vBulletin" />
+	</a>
+      </div>
+    </noscript>
+    <!-- End of StatCounter Code for Default Guide -->          
   </body>
 </html>
