--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 		  <a href="files/keys/gkappes-public.gpg">pubring</a>,
 		  <a href="files/keys/gkappes-public.asc">public key</a>,
 		  <a href="files/keys/gkappes-public-fingerprint.asc">fingerprint</a>. <br />
-		  Pelase note that I have recently transitioned from an old GPG key
+		  Please note that I have recently transitioned from an old GPG key
 		  (<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0x48D4F773F47D5746">F47D5746</a>). You
 		  can find the transition statement
 		  <a href="files/keys/gpg-transition.txt">here</a>. It is signed by both my
